deploy: ea9c8137d29abe9801f13823d79edaa41ee4b073

--- a/etc/snippet-vex.html
+++ b/etc/snippet-vex.html
@@ -243,6 +243,47 @@ if(nrm.y &lt; 0)
 <h3 id="0--1-구간-반복"><a class="header" href="#0--1-구간-반복">0 ~ 1 구간 반복</a></h3>
 <pre><code class="language-vex">float y = abs((x % 2) - 1);
 </code></pre>
+<h3 id="엇갈려서-선을-이을때"><a class="header" href="#엇갈려서-선을-이을때">엇갈려서 선을 이을때</a></h3>
+<pre><code class="language-vex">//아니면 그냥 Connect Adjacent Pieces도 고려해볼것
+
+vector p1_arr[];
+for(int i = 0; i &lt; npoints(0); i++)
+{
+    vector p1 = point(1, "P", i);
+    append(p1_arr, p1);
+}
+
+for (int i = 0; i &lt; npoints(0); ++i)
+{
+    int idx = i + 1;
+    if (idx == npoints(0))
+    {
+        idx = 0;
+    }
+
+    vector p1 = p1_arr[idx];
+    int newpt = addpoint(0, p1);
+    addprim(0, "polyline", i, newpt);
+}
+
+return;
+
+// 역방향일 경우
+// - 위 vex에서 1번을 sort노드로 shift의 offset을 -1로
+// - 아래 vex를 사용
+for (int i = 0; i &lt; npoints(0); ++i)
+{
+    int idx = i - 1;
+    if (idx &lt; -1)
+    {
+        idx = npoints(0) - 1;
+    }
+
+    vector p1 = p1_arr[idx];
+    int newpt = addpoint(0, p1);
+    addprim(0, "polyline", i, newpt);
+}
+</code></pre>
 
                     </main>
 
