--- a/technic/VAT.html
+++ b/technic/VAT.html
@@ -273,6 +273,7 @@ Settings
 <ul>
 <li><a href="https://qiita.com/yasuhiro0122/items/1222b61549891af6c2f4">https://qiita.com/yasuhiro0122/items/1222b61549891af6c2f4</a></li>
 <li><a href="https://medium.com/tech-at-wildlife-studios/texture-animation-techniques-1daecb316657">https://medium.com/tech-at-wildlife-studios/texture-animation-techniques-1daecb316657</a></li>
+<li><a href="https://www.sidefx.com/tutorials/vertex-animation-textures-in-unity/">https://www.sidefx.com/tutorials/vertex-animation-textures-in-unity/</a></li>
 </ul>
 
                     </main>
