--- a/etc/reference.html
+++ b/etc/reference.html
@@ -322,46 +322,6 @@
 </ul>
 </li>
 </ul>
-<h2 id="유료"><a class="header" href="#유료">유료</a></h2>
-<ul>
-<li>독학.net
-<ul>
-<li><a href="https://www.dokak.net/puddles-ripples">https://www.dokak.net/puddles-ripples</a></li>
-</ul>
-</li>
-<li><a href="https://www.twahoudini.com/start">TWA 후디니의 정석</a>
-<ul>
-<li><a href="https://www.youtube.com/@TWAHOUDINI">https://www.youtube.com/@TWAHOUDINI</a></li>
-</ul>
-</li>
-<li>발차기
-<ul>
-<li><a href="https://www.balchagi.net/course/22spr-md-bsh1/">https://www.balchagi.net/course/22spr-md-bsh1/</a></li>
-</ul>
-</li>
-<li>cgstation
-<ul>
-<li><a href="https://www.cgstation.kr/?idx=71">HOUDINI 절차적 모델링과 파괴시뮬레이션 풀패키지</a></li>
-</ul>
-</li>
-<li>fxphd
-<ul>
-<li><a href="https://www.fxphd.com/details/578/">https://www.fxphd.com/details/578/</a></li>
-<li><a href="https://www.fxphd.com/details/580/">https://www.fxphd.com/details/580/</a></li>
-</ul>
-</li>
-<li>??
-<ul>
-<li><a href="https://cgworld.jp/special/houdinicookbookacademy/">https://cgworld.jp/special/houdinicookbookacademy/</a></li>
-</ul>
-</li>
-<li>Houdini Procedural Lake Houses
-<ul>
-<li><a href="https://anopara.gumroad.com/l/ngKUJ">https://anopara.gumroad.com/l/ngKUJ</a></li>
-</ul>
-</li>
-<li><a href="https://www.pluralsight.com/courses/houdini-engine-unity-fundamentals">https://www.pluralsight.com/courses/houdini-engine-unity-fundamentals</a></li>
-</ul>
 <h2 id=""><a class="header" href="#">???</a></h2>
 <ul>
 <li><a href="https://www.youtube.com/watch?v=YMOGLxNs0Jk">Houdini Tutorial Edge Damage</a></li>
@@ -424,14 +384,12 @@
 </ul>
 <h2 id="copmany"><a class="header" href="#copmany">Copmany</a></h2>
 <ul>
-<li>
-<p>SEGA</p>
+<li>SEGA (용과 같이)
 <ul>
 <li><a href="https://techblog.sega.jp/search?q=houdini">https://techblog.sega.jp/search?q=houdini</a></li>
 </ul>
 </li>
-<li>
-<p>폴리포니 디지털</p>
+<li>폴리포니 디지털 (그란 투리스모)
 <ul>
 <li><a href="https://www.youtube.com/watch?v=57GG1bAngcE">Gran Turismo 7 | Polyphony Digital | Houdini Connect</a></li>
 <li><a href="https://www.polyphony.co.jp/publications/">https://www.polyphony.co.jp/publications/</a>
@@ -442,12 +400,8 @@
 </li>
 </ul>
 </li>
-<li>
-<p><a href="https://blog.toylogic.co.jp/tag/houdini">https://blog.toylogic.co.jp/tag/houdini</a></p>
-</li>
-<li>
-<p><a href="https://academy.cgworld.jp/contents/search?q%5Bkeyword%5D=houdini">https://academy.cgworld.jp/contents/search?q%5Bkeyword%5D=houdini</a></p>
-</li>
+<li><a href="https://blog.toylogic.co.jp/tag/houdini">https://blog.toylogic.co.jp/tag/houdini</a></li>
+<li><a href="https://academy.cgworld.jp/contents/search?q%5Bkeyword%5D=houdini">https://academy.cgworld.jp/contents/search?q%5Bkeyword%5D=houdini</a></li>
 </ul>
 <h2 id="gdc"><a class="header" href="#gdc">GDC</a></h2>
 <ul>
@@ -459,40 +413,6 @@
 </li>
 <li><a href="https://gdcvault.com/play/1035413/Tencent-Games-Developer-Summit-The">GDC25 Tencent Games Developer Summit: The Procedural Way: Reconstruct Mega City of Qin Dynasty (Presented by Tencent Games)</a></li>
 <li><a href="https://youtu.be/H4r_69WNE9o">Video games Created using Houdini</a></li>
-</ul>
-<h2 id="ehoudini"><a class="header" href="#ehoudini">ehoudini</a></h2>
-<ul>
-<li>EHoudiniAcademy
-<ul>
-<li><a href="https://www.youtube.com/playlist?list=PLd959VTYXCB5RKDYwf8pC2vNjGzVlAf6E">Foundation Module - Houdini 101</a>
-<ul>
-<li>건물만들기</li>
-</ul>
-</li>
-<li><a href="https://youtube.com/playlist?list=PLd959VTYXCB747UsN1EV8_bLUVEhhtL3i&amp;si=GiGtwdPQUTnznc2L">Foundation Module - The Foundation Project</a></li>
-</ul>
-</li>
-</ul>
-<h2 id="cgcircuit"><a class="header" href="#cgcircuit">cgcircuit</a></h2>
-<ul>
-<li><a href="https://www.cgcircuit.com/tutorial/procedural-modeling-with-vex">Procedural Modeling with VEX</a>
-<ul>
-<li>다리만들기</li>
-</ul>
-</li>
-</ul>
-<h2 id="교육"><a class="header" href="#교육">교육</a></h2>
-<ul>
-<li><a href="https://www.vertexschool.com/">https://www.vertexschool.com/</a></li>
-<li><a href="https://www.doublejumpacademy.com/workshops/houdini-for-games-in-unreal-engine">https://www.doublejumpacademy.com/workshops/houdini-for-games-in-unreal-engine</a></li>
-</ul>
-<h2 id="-1"><a class="header" href="#-1"></a></h2>
-<p>https://www.appliedhoudini.com/</p>
-<h2 id="indie-pixel"><a class="header" href="#indie-pixel">indie pixel</a></h2>
-<ul>
-<li><a href="https://www.indie-pixel.com/">https://www.indie-pixel.com/</a></li>
-<li><a href="https://indiepixel.gumroad.com/">https://indiepixel.gumroad.com/</a></li>
-<li><a href="https://www.youtube.com/@IndiePixel3D/playlists">https://www.youtube.com/@IndiePixel3D/playlists</a></li>
 </ul>
 <h2 id="person"><a class="header" href="#person">person</a></h2>
 <h3 id="luiz-kruel"><a class="header" href="#luiz-kruel">LUIZ KRUEL</a></h3>
@@ -627,17 +547,31 @@ pos.y -= sag;
 
 @P = pos;
 </code></pre>
-<h2 id="juanjo-martínez"><a class="header" href="#juanjo-martínez">Juanjo Martínez</a></h2>
+<h3 id="juanjo-martínez"><a class="header" href="#juanjo-martínez">Juanjo Martínez</a></h3>
 <ul>
 <li><a href="https://www.youtube.com/c/JuanjoMart%C3%ADnezVFX/">https://www.youtube.com/c/JuanjoMart%C3%ADnezVFX/</a></li>
 <li><a href="https://github.com/juanjo4martinez">https://github.com/juanjo4martinez</a></li>
 </ul>
-<h2 id="nikola-damjanov"><a class="header" href="#nikola-damjanov">NIKOLA DAMJANOV</a></h2>
+<h3 id="nikola-damjanov"><a class="header" href="#nikola-damjanov">NIKOLA DAMJANOV</a></h3>
 <ul>
 <li><a href="https://www.artstation.com/nikoladamjanov">https://www.artstation.com/nikoladamjanov</a></li>
 <li><a href="https://www.sidefx.com/contentlibrary/cops-mega-file/">COPs Mega File</a></li>
 <li><a href="https://www.sidefx.com/tutorials/the-complete-a-z-terrain-handbook/">THE COMPLETE A-Z TERRAIN HANDBOOK</a></li>
 <li><a href="https://www.youtube.com/watch?v=eE01Z-zc54U">EPC2022 | Nikola Damjanov | Living Procedurally</a></li>
+</ul>
+<h3 id="adrienlambert"><a class="header" href="#adrienlambert">adrienlambert</a></h3>
+<ul>
+<li><a href="https://adrienlambert.gumroad.com/">https://adrienlambert.gumroad.com/</a></li>
+<li><a href="https://www.youtube.com/@AdrienLambertvfx/">https://www.youtube.com/@AdrienLambertvfx/</a></li>
+<li><a href="https://adrienlambert.gumroad.com/l/TbWQr">UVs LAST HOPE / Houdini Indie HDA</a></li>
+<li><a href="https://adrienlambert.gumroad.com/l/pythfx">How not to suck at Python / SideFX Houdini</a></li>
+<li><a href="https://adrienlambert.gumroad.com/l/pYaGH">Tutorial series - Procedural Cliffs with SideFX houdini</a></li>
+</ul>
+<h3 id="timucin-ozger"><a class="header" href="#timucin-ozger">Timucin Ozger</a></h3>
+<ul>
+<li><a href="https://www.artstation.com/timucinozger/">https://www.artstation.com/timucinozger/</a></li>
+<li><a href="https://www.youtube.com/@StudioOriented">https://www.youtube.com/@StudioOriented</a></li>
+<li><a href="https://www.timucinozger.com/">https://www.timucinozger.com/</a></li>
 </ul>
 
                     </main>
