--- a/print.html
+++ b/print.html
@@ -518,7 +518,7 @@ V View controls</p>
 <tr><td>Draw Curve</td><td>그릴 수 있지만, 거칠기에 Smooth를 같이 써주는게 좋다. // Projection.Projection : Geometry도 있다</td></tr>
 <tr><td>Smooth</td><td>완만하게 해주는거 커브, 리셈플이랑 주로 같이 쓰임</td></tr>
 <tr><td>Carve</td><td>깍아내기 // uv로 선을 자름</td></tr>
-<tr><td>Sweep</td><td>선따라 길만들기  // UVs and Attribute - Compute UVs 도 있으니 참고. //Construction - Target Up Vector에 Y Axis도 잘 활용</td></tr>
+<tr><td>Sweep</td><td>선따라 길만들기  // UVs and Attribute - Compute UVs 도 있으니 참고. //Construction - Target Up Vector에 Y Axis도 잘 활용 // 밧줄같은건 twist</td></tr>
 <tr><td>Copy To Point</td><td>포인트들 위치로 복사  // attribute 삭제되는거 주의 // Pack and Instance 로 입력 Geometry단위로 Primitive로 묶을 수 있음</td></tr>
 <tr><td>Copy And Transform</td><td>갯수만큼 복사 // 테두리같이 뭔가 둘러싸는 걸 만들 때도 유용 / Match Size로 위치조정</td></tr>
 <tr><td>Foreach</td><td><a href="https://www.youtube.com/watch?v=xs5WezgOZlo">https://www.youtube.com/watch?v=xs5WezgOZlo</a></td></tr>
@@ -561,6 +561,9 @@ V View controls</p>
 <tr><td>Labs Edge Group To Curve</td><td>태두리 구하기</td></tr>
 <tr><td>Labs Dissolve Flat Edges</td><td></td></tr>
 <tr><td>Switch / Switch-If</td><td></td></tr>
+<tr><td>Labs Detail Mesh</td><td>uv한 오브젝트에 다른 패턴를 프로젝트하여 디테일을 살림</td></tr>
+<tr><td>helix</td><td>나선</td></tr>
+<tr><td>Connect Adjacent Pieces</td><td>점끼리 선이을때</td></tr>
 </tbody></table>
 </div>
 <p>Edge Straighten</p>
@@ -569,7 +572,7 @@ Refine</p>
 <p>Chain - Copy To Point랑 비슷한데 start/end 지정할 수 있음.
 Box Cutter : 박스모양으로 자름 Boolean이랑 비슷함
 Physical Painter : 물체위에 물체붙이기
-Thicken : 양옆으로 늘어나기</p>
+Thicken : 양옆으로 늘어나기 - poly extrude는 한쪽이지만</p>
 <p>Labs Instance Attribute : 디버그용. xyz표시되는 gizmo가 유용하다
 Labs symmetrize : mirror랑 비슷</p>
 <p>Extract Silhouette Y축으로 하면 위에서 아래로 내려다 보는 (실루엣)면을 얻을 수 있음.</p>
@@ -2523,6 +2526,7 @@ Settings
 <ul>
 <li><a href="https://qiita.com/yasuhiro0122/items/1222b61549891af6c2f4">https://qiita.com/yasuhiro0122/items/1222b61549891af6c2f4</a></li>
 <li><a href="https://medium.com/tech-at-wildlife-studios/texture-animation-techniques-1daecb316657">https://medium.com/tech-at-wildlife-studios/texture-animation-techniques-1daecb316657</a></li>
+<li><a href="https://www.sidefx.com/tutorials/vertex-animation-textures-in-unity/">https://www.sidefx.com/tutorials/vertex-animation-textures-in-unity/</a></li>
 </ul>
 <div style="break-before: page; page-break-before: always;"></div><p>랜드스케이프</p>
 <ul>
@@ -5127,46 +5131,6 @@ propagate(wave, x) # 전파</p>
 </ul>
 </li>
 </ul>
-<h2 id="유료"><a class="header" href="#유료">유료</a></h2>
-<ul>
-<li>독학.net
-<ul>
-<li><a href="https://www.dokak.net/puddles-ripples">https://www.dokak.net/puddles-ripples</a></li>
-</ul>
-</li>
-<li><a href="https://www.twahoudini.com/start">TWA 후디니의 정석</a>
-<ul>
-<li><a href="https://www.youtube.com/@TWAHOUDINI">https://www.youtube.com/@TWAHOUDINI</a></li>
-</ul>
-</li>
-<li>발차기
-<ul>
-<li><a href="https://www.balchagi.net/course/22spr-md-bsh1/">https://www.balchagi.net/course/22spr-md-bsh1/</a></li>
-</ul>
-</li>
-<li>cgstation
-<ul>
-<li><a href="https://www.cgstation.kr/?idx=71">HOUDINI 절차적 모델링과 파괴시뮬레이션 풀패키지</a></li>
-</ul>
-</li>
-<li>fxphd
-<ul>
-<li><a href="https://www.fxphd.com/details/578/">https://www.fxphd.com/details/578/</a></li>
-<li><a href="https://www.fxphd.com/details/580/">https://www.fxphd.com/details/580/</a></li>
-</ul>
-</li>
-<li>??
-<ul>
-<li><a href="https://cgworld.jp/special/houdinicookbookacademy/">https://cgworld.jp/special/houdinicookbookacademy/</a></li>
-</ul>
-</li>
-<li>Houdini Procedural Lake Houses
-<ul>
-<li><a href="https://anopara.gumroad.com/l/ngKUJ">https://anopara.gumroad.com/l/ngKUJ</a></li>
-</ul>
-</li>
-<li><a href="https://www.pluralsight.com/courses/houdini-engine-unity-fundamentals">https://www.pluralsight.com/courses/houdini-engine-unity-fundamentals</a></li>
-</ul>
 <h2 id="-4"><a class="header" href="#-4">???</a></h2>
 <ul>
 <li><a href="https://www.youtube.com/watch?v=YMOGLxNs0Jk">Houdini Tutorial Edge Damage</a></li>
@@ -5229,14 +5193,12 @@ propagate(wave, x) # 전파</p>
 </ul>
 <h2 id="copmany"><a class="header" href="#copmany">Copmany</a></h2>
 <ul>
-<li>
-<p>SEGA</p>
+<li>SEGA (용과 같이)
 <ul>
 <li><a href="https://techblog.sega.jp/search?q=houdini">https://techblog.sega.jp/search?q=houdini</a></li>
 </ul>
 </li>
-<li>
-<p>폴리포니 디지털</p>
+<li>폴리포니 디지털 (그란 투리스모)
 <ul>
 <li><a href="https://www.youtube.com/watch?v=57GG1bAngcE">Gran Turismo 7 | Polyphony Digital | Houdini Connect</a></li>
 <li><a href="https://www.polyphony.co.jp/publications/">https://www.polyphony.co.jp/publications/</a>
@@ -5247,12 +5209,8 @@ propagate(wave, x) # 전파</p>
 </li>
 </ul>
 </li>
-<li>
-<p><a href="https://blog.toylogic.co.jp/tag/houdini">https://blog.toylogic.co.jp/tag/houdini</a></p>
-</li>
-<li>
-<p><a href="https://academy.cgworld.jp/contents/search?q%5Bkeyword%5D=houdini">https://academy.cgworld.jp/contents/search?q%5Bkeyword%5D=houdini</a></p>
-</li>
+<li><a href="https://blog.toylogic.co.jp/tag/houdini">https://blog.toylogic.co.jp/tag/houdini</a></li>
+<li><a href="https://academy.cgworld.jp/contents/search?q%5Bkeyword%5D=houdini">https://academy.cgworld.jp/contents/search?q%5Bkeyword%5D=houdini</a></li>
 </ul>
 <h2 id="gdc"><a class="header" href="#gdc">GDC</a></h2>
 <ul>
@@ -5264,40 +5222,6 @@ propagate(wave, x) # 전파</p>
 </li>
 <li><a href="https://gdcvault.com/play/1035413/Tencent-Games-Developer-Summit-The">GDC25 Tencent Games Developer Summit: The Procedural Way: Reconstruct Mega City of Qin Dynasty (Presented by Tencent Games)</a></li>
 <li><a href="https://youtu.be/H4r_69WNE9o">Video games Created using Houdini</a></li>
-</ul>
-<h2 id="ehoudini"><a class="header" href="#ehoudini">ehoudini</a></h2>
-<ul>
-<li>EHoudiniAcademy
-<ul>
-<li><a href="https://www.youtube.com/playlist?list=PLd959VTYXCB5RKDYwf8pC2vNjGzVlAf6E">Foundation Module - Houdini 101</a>
-<ul>
-<li>건물만들기</li>
-</ul>
-</li>
-<li><a href="https://youtube.com/playlist?list=PLd959VTYXCB747UsN1EV8_bLUVEhhtL3i&amp;si=GiGtwdPQUTnznc2L">Foundation Module - The Foundation Project</a></li>
-</ul>
-</li>
-</ul>
-<h2 id="cgcircuit"><a class="header" href="#cgcircuit">cgcircuit</a></h2>
-<ul>
-<li><a href="https://www.cgcircuit.com/tutorial/procedural-modeling-with-vex">Procedural Modeling with VEX</a>
-<ul>
-<li>다리만들기</li>
-</ul>
-</li>
-</ul>
-<h2 id="교육"><a class="header" href="#교육">교육</a></h2>
-<ul>
-<li><a href="https://www.vertexschool.com/">https://www.vertexschool.com/</a></li>
-<li><a href="https://www.doublejumpacademy.com/workshops/houdini-for-games-in-unreal-engine">https://www.doublejumpacademy.com/workshops/houdini-for-games-in-unreal-engine</a></li>
-</ul>
-<h2 id="-5"><a class="header" href="#-5"></a></h2>
-<p>https://www.appliedhoudini.com/</p>
-<h2 id="indie-pixel"><a class="header" href="#indie-pixel">indie pixel</a></h2>
-<ul>
-<li><a href="https://www.indie-pixel.com/">https://www.indie-pixel.com/</a></li>
-<li><a href="https://indiepixel.gumroad.com/">https://indiepixel.gumroad.com/</a></li>
-<li><a href="https://www.youtube.com/@IndiePixel3D/playlists">https://www.youtube.com/@IndiePixel3D/playlists</a></li>
 </ul>
 <h2 id="person"><a class="header" href="#person">person</a></h2>
 <h3 id="luiz-kruel"><a class="header" href="#luiz-kruel">LUIZ KRUEL</a></h3>
@@ -5432,17 +5356,31 @@ pos.y -= sag;
 
 @P = pos;
 </code></pre>
-<h2 id="juanjo-martínez"><a class="header" href="#juanjo-martínez">Juanjo Martínez</a></h2>
+<h3 id="juanjo-martínez"><a class="header" href="#juanjo-martínez">Juanjo Martínez</a></h3>
 <ul>
 <li><a href="https://www.youtube.com/c/JuanjoMart%C3%ADnezVFX/">https://www.youtube.com/c/JuanjoMart%C3%ADnezVFX/</a></li>
 <li><a href="https://github.com/juanjo4martinez">https://github.com/juanjo4martinez</a></li>
 </ul>
-<h2 id="nikola-damjanov"><a class="header" href="#nikola-damjanov">NIKOLA DAMJANOV</a></h2>
+<h3 id="nikola-damjanov"><a class="header" href="#nikola-damjanov">NIKOLA DAMJANOV</a></h3>
 <ul>
 <li><a href="https://www.artstation.com/nikoladamjanov">https://www.artstation.com/nikoladamjanov</a></li>
 <li><a href="https://www.sidefx.com/contentlibrary/cops-mega-file/">COPs Mega File</a></li>
 <li><a href="https://www.sidefx.com/tutorials/the-complete-a-z-terrain-handbook/">THE COMPLETE A-Z TERRAIN HANDBOOK</a></li>
 <li><a href="https://www.youtube.com/watch?v=eE01Z-zc54U">EPC2022 | Nikola Damjanov | Living Procedurally</a></li>
+</ul>
+<h3 id="adrienlambert"><a class="header" href="#adrienlambert">adrienlambert</a></h3>
+<ul>
+<li><a href="https://adrienlambert.gumroad.com/">https://adrienlambert.gumroad.com/</a></li>
+<li><a href="https://www.youtube.com/@AdrienLambertvfx/">https://www.youtube.com/@AdrienLambertvfx/</a></li>
+<li><a href="https://adrienlambert.gumroad.com/l/TbWQr">UVs LAST HOPE / Houdini Indie HDA</a></li>
+<li><a href="https://adrienlambert.gumroad.com/l/pythfx">How not to suck at Python / SideFX Houdini</a></li>
+<li><a href="https://adrienlambert.gumroad.com/l/pYaGH">Tutorial series - Procedural Cliffs with SideFX houdini</a></li>
+</ul>
+<h3 id="timucin-ozger"><a class="header" href="#timucin-ozger">Timucin Ozger</a></h3>
+<ul>
+<li><a href="https://www.artstation.com/timucinozger/">https://www.artstation.com/timucinozger/</a></li>
+<li><a href="https://www.youtube.com/@StudioOriented">https://www.youtube.com/@StudioOriented</a></li>
+<li><a href="https://www.timucinozger.com/">https://www.timucinozger.com/</a></li>
 </ul>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="ta"><a class="header" href="#ta">TA</a></h1>
 <ul>
@@ -6310,6 +6248,47 @@ if(nrm.y &lt; 0)
 </code></pre>
 <h3 id="0--1-구간-반복"><a class="header" href="#0--1-구간-반복">0 ~ 1 구간 반복</a></h3>
 <pre><code class="language-vex">float y = abs((x % 2) - 1);
+</code></pre>
+<h3 id="엇갈려서-선을-이을때"><a class="header" href="#엇갈려서-선을-이을때">엇갈려서 선을 이을때</a></h3>
+<pre><code class="language-vex">//아니면 그냥 Connect Adjacent Pieces도 고려해볼것
+
+vector p1_arr[];
+for(int i = 0; i &lt; npoints(0); i++)
+{
+    vector p1 = point(1, "P", i);
+    append(p1_arr, p1);
+}
+
+for (int i = 0; i &lt; npoints(0); ++i)
+{
+    int idx = i + 1;
+    if (idx == npoints(0))
+    {
+        idx = 0;
+    }
+
+    vector p1 = p1_arr[idx];
+    int newpt = addpoint(0, p1);
+    addprim(0, "polyline", i, newpt);
+}
+
+return;
+
+// 역방향일 경우
+// - 위 vex에서 1번을 sort노드로 shift의 offset을 -1로
+// - 아래 vex를 사용
+for (int i = 0; i &lt; npoints(0); ++i)
+{
+    int idx = i - 1;
+    if (idx &lt; -1)
+    {
+        idx = npoints(0) - 1;
+    }
+
+    vector p1 = p1_arr[idx];
+    int newpt = addpoint(0, p1);
+    addprim(0, "polyline", i, newpt);
+}
 </code></pre>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="플러그인"><a class="header" href="#플러그인">플러그인</a></h1>
 <ul>
