deploy: 3efd2fde14c84339c91c81b96d8fe6d6cf595096

--- a/etc/reference.html
+++ b/etc/reference.html
@@ -573,6 +573,14 @@ pos.y -= sag;
 <li><a href="https://www.youtube.com/@StudioOriented">https://www.youtube.com/@StudioOriented</a></li>
 <li><a href="https://www.timucinozger.com/">https://www.timucinozger.com/</a></li>
 </ul>
+<h3 id="sean-gobey"><a class="header" href="#sean-gobey">Sean Gobey</a></h3>
+<ul>
+<li><a href="https://www.artstation.com/seangobey">https://www.artstation.com/seangobey</a></li>
+<li><a href="https://x.com/SeanGobey">https://x.com/SeanGobey</a></li>
+<li><a href="https://seangobey.gumroad.com/">https://seangobey.gumroad.com/</a></li>
+<li><a href="https://www.youtube.com/watch?v=nlbJwMoj1Dg">You’re Probably Lighting Wrong: Physically Based Lighting in UE5 | Unreal Fest Gold Coast 2024</a></li>
+<li><a href="https://www.youtube.com/watch?v=UC9oRJpBh8E">You're probably modelling wrong: A guide to creating billion polygon worlds</a></li>
+</ul>
 
                     </main>
 
