--- a/etc/snippet.html
+++ b/etc/snippet.html
@@ -383,6 +383,24 @@ matrix m = rotation_matrix * location_matrix;
 </ul>
 </li>
 </ul>
+<h3 id="점선-크기조절"><a class="header" href="#점선-크기조절">점/선 크기조절</a></h3>
+<ul>
+<li>점
+<ul>
+<li>Display Option : Guide
+<ul>
+<li>Guide Size &gt; Point marker size</li>
+</ul>
+</li>
+</ul>
+</li>
+<li>선
+<ul>
+<li>Display Option : Geometry</li>
+<li>WireFrame &gt; WireFrame Width</li>
+</ul>
+</li>
+</ul>
 <h3 id="이미지-카메라-매칭"><a class="header" href="#이미지-카메라-매칭">이미지 카메라 매칭</a></h3>
 <ul>
 <li><a href="https://www.youtube.com/watch?v=qWD1nRqf2bk">Houdini Image Camera Matching</a>
