--- a/node/geometry/geo_node.html
+++ b/node/geometry/geo_node.html
@@ -273,7 +273,7 @@
 <tr><td>Switch / Switch-If</td><td></td></tr>
 <tr><td>Labs Detail Mesh</td><td>uv한 오브젝트에 다른 패턴를 프로젝트하여 디테일을 살림</td></tr>
 <tr><td>helix</td><td>나선</td></tr>
-<tr><td>Connect Adjacent Pieces</td><td>점끼리 선이을때</td></tr>
+<tr><td>Connect Adjacent Pieces</td><td>점끼리 선이을때 // smooth랑 이용하면 거미줄같이 보임</td></tr>
 </tbody></table>
 </div>
 <p>Edge Straighten</p>
