--- a/script/python.html
+++ b/script/python.html
@@ -668,7 +668,11 @@ def createViewerStateTemplate():
 <li><a href="https://jeroen.denayer.com/">https://jeroen.denayer.com/</a>
 <ul>
 <li><a href="https://www.youtube.com/watch?v=2XIIEhgcWMQ">Houdini: Python Viewer State - Interactive curve point rotation and scaling - Tutorial</a></li>
-<li><a href="https://www.youtube.com/watch?v=mBdKK_VKDHQ&amp;t=893s">BUas Procedural Showcase | Aleksandra Radivilovic, Erwin Smeenge, Jens van Kampen, Joshua Rizzo ...</a></li>
+<li><a href="https://www.youtube.com/watch?v=mBdKK_VKDHQ&amp;t=893s">BUas Procedural Showcase | Aleksandra Radivilovic, Erwin Smeenge, Jens van Kampen, Joshua Rizzo ...</a>
+<ul>
+<li>여기서 드래그로 가드레일 부분 조절</li>
+</ul>
+</li>
 <li><a href="https://pepri.gumroad.com/l/UHmyL">https://pepri.gumroad.com/l/UHmyL</a></li>
 </ul>
 </li>
